# mana_curve

./: .gitignore  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt  run_vren.sh  setup.py  vercel-test.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
mana_curve/: convert_json_to_decklist.py  deck.json  deck_generator.py  deck_loader.py  generate.sh  get_avg_cmc.py  kozilek.json  kozilek_template.json  pull_archidekt_template.py  simplified.py  simulate.sh  simulation_results.csv  simulator.py  sweep.py  sweep.sh  sweep_over_template.py  temp_deck.json
mana_curve/decklist_model/: cards.py  decklist.py  goldfisher.py  mana_functions.py  record_games.py
mana_curve/elenda/: create_top_decklist_elenda.sh  elenda_simplified.sh  elenda_template.json  post_sim_elenda.sh  pull_elenda.sh  sweep_elenda.sh  template_simulation_results.csv
mana_curve/kess/: create_top_decklist_kess.sh  kess_template.json  post_sim_kess.sh  pull_kess.sh  sweep_kess.sh  template_simulation_results.csv
mana_curve/kozilek/: create_top_decklist_kozilek.sh  kozilek_template.json  post_sim_kozilek.sh  pull_kozilek.sh  sweep_kozilek.sh  template_simulation_results.csv
mana_curve/rabbits/: goldfish_rabbits.py
mana_curve/simplified_scripts/: atraxa.sh  kess.sh  lurrus_simplified.sh  r_and_r.sh
scripts/: debug_labeler.py  fetch_benchmark_decks.py  kill_flask.sh  profile_benchmark.py  run_labeling.sh  start_flask.sh  vercel_build.sh
spellbook_graph/: bulk.py  main.py
src/auto_goldfish/: pyodide_runner.py
tests/: conftest.py
tests/integration/: test_effect_overrides.py  test_fast_optimizer_integration.py  test_goldfisher.py  test_metrics.py  test_optimization_integration.py
tests/js/: test_labeler_wizard.js
tests/unit/: test_annotation_persistence.py  test_autocard_coverage.py  test_autocard_exporter.py  test_autocard_labeler.py  test_autocard_schemas.py  test_autocard_scryfall.py  test_autocard_validator.py  test_bugfixes.py  test_builder.py  test_card.py  test_card_database.py  test_card_resolver.py  test_cli_fetch_otags.py  test_confidence_benchmark.py  test_db_integration.py  test_db_models.py  test_db_persistence.py  test_effects.py  test_fast_optimizer.py  test_feature_analysis.py  test_game_state.py  test_json_loader.py  test_llm_backends.py  test_loader.py  test_mana.py  test_mana_efficiency.py  test_metrics.py  test_moxfield.py  test_mulligan.py  test_optimization.py  test_otag_loader.py  test_pyodide_compat.py  test_pyodide_runner.py  test_rate_limiter.py  test_simulation_runner.py  test_spell_priority.py  test_text_import.py  (+2 more)
(+142 files in other folders)
