[project]
name = "mana_curve"
version = "0.2.0"
description = "Magic: The Gathering commander deck simulation tool"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyrchidekt>=2.1.0",
    "scrython>=1.11.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
web = ["flask>=3.1", "gunicorn>=23.0"]
dev = [
    "pytest>=9.0.2",
    "flask>=3.1",
]
autocard = [
    "ollama>=0.4.0",
]

[project.scripts]
mana-curve = "mana_curve.cli.main:main"
mana-curve-web = "mana_curve.web:create_app"
autocard = "mana_curve.autocard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mana_curve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
